force-app/main/default/objects/Universal_App__mdt/Universal_App__mdt.object-meta.xml
<CustomObject>
    <label>Universal App</label>
    <pluralLabel>Universal Apps</pluralLabel>
</CustomObject>