force-app/main/default/objects/Universal_App__mdt/fields/Boolean_Field__c.field-meta.xml
<CustomField>
    <fullName>Boolean_Field__c</fullName>
    <label>Boolean Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>