force-app/main/default/objects/Universal_App__mdt/fields/CSS__c.field-meta.xml
<CustomField>
    <fullName>CSS__c</fullName>
    <label>CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>