force-app/main/default/objects/Universal_App__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Salesforce Object API Name</description>
    <inlineHelpText>API name of standard or custom object (Account, Contact, Custom__c, etc.).</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>