force-app/main/default/objects/Universal_App__mdt/fields/Object_with_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Object_with_Boolean__c</fullName>
    <label>Object with Boolean</label>
    <length>255</length>
    <type>Text</type>
</CustomField>