force-app/main/default/objects/Universal_App__mdt/fields/Page_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Page_Redirect__c</fullName>
    <label>Page Redirect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>