force-app/main/default/objects/Universal_App__mdt/fields/Page_Redirect_if_True__c.field-meta.xml
<CustomField>
    <fullName>Page_Redirect_if_True__c</fullName>
    <label>Page Redirect if True</label>
    <length>255</length>
    <type>Text</type>
</CustomField>