force-app/main/default/objects/Universal_App__mdt/fields/Post_Submit_Fields__c.field-meta.xml
<CustomField>
    <fullName>Post_Submit_Fields__c</fullName>
    <inlineHelpText>Enter a JSON formatted map of the record&apos;s field API names to values (i.e. {&quot;Name&quot;:&quot;Valued Account&quot;}) that will be populated during submission.</inlineHelpText>
    <label>Post Submit Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>